--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Calc</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="scripts.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
